# discordtavern

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: character.rs  config.rs  discord.rs  error.rs  event_handler.rs  main.rs  prelude.rs  super_message.rs
src/commands/: chat.rs  gubbar.rs  gubbe.rs  gubbe2.rs  mod.rs
src/utils/: character.rs  config.rs  discord.rs  event_handler.rs  mod.rs  super_message.rs
src/utils/commands/: chat.rs  example.rs  gubbe.rs  mod.rs
