[package]
name = "discordtavern"
version = "0.2.4"
edition = "2021"

[dependencies]
async-openai = "0.23.4"
bon = "3.3.2"
cfg-if = "1.0.0"
dashmap = { version = "6.0.1", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "into", "as_ref", "from"] }
futures = "0.3.30"
itertools = "0.13.0"
parking_lot = { version = "0.12.3", features = ["serde"] }
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
ron = "0.9.0-alpha.0"
serde = { version = "1.0.205", features = ["derive"] }
small-fixed-array = "0.4.5"
strsim = "0.11.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery =  { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
